# taskautomation

./: .gitignore  README.md  pyproject.toml
docs/guides/: ai_assistants.md  change_guidelines.md  change_submission.md  lessons_learned.md  setup.md  task_instructions.md  testing.md
docs/pgp/: project-security-public.asc
docs/planning/: README.md  ai_agent_considerations.md  automation_plan.md  implementation_progress.md  modular_automation_plan.md  task_wrapup_script_plan.md  three_script_workflow.md
docs/templates/: template.md
src/debugging/: debug_test_parser.py
src/taskautomation/: core_utils.py  create_change_entry.py  file_operations.py  git_helpers.py  markdown_parser.py  output_formatter.py  run_tests.py  task_parser.py  task_schema.py  task_types.py  task_utils.py  task_validator.py  validate_automation.py  validation_utils.py
tests/: test_core_utils.py  test_create_change_entry.py  test_markdown_parser.py  test_run_tests.py  test_task_utils.py  test_validate_automation.py  test_validation_utils.py
tests/data/: pyproject.toml  sample_tasks.md  template.md
